[fix] Allow to start server with JMS disabled